# aggregator

./: .dockerignore  .env.example  .env_exemple  .gitignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
aggregator/: __init__.py  aggregator.py  cache.py  clients.py  config.py  dedup.py  features.py  feedback.py  filtering.py  html_report.py  language.py  notifications.py  personalization.py  ratelimiter.py  retry.py  secrets.py  sentiment.py  storage.py  types.py  utils.py  validators.py
aggregator/collectors/: __init__.py  hackernews.py  reddit.py  ted.py
aggregator/ml/: __init__.py  classifier.py  transformer_classifier.py
alembic/: env.py
alembic/versions/: 20251225_000001_initial_schema.py  20251227_000001_add_performance_indexes.py  20251227_000002_query_optimization_indexes.py  20251228_000001_add_period_to_user.py
config/: ml_config.json  sources.json  topics.json
data/: news_classification_dataset.csv
docker/: Dockerfile.backend  entrypoint.sh
docs/: improvement_plan.md  weekly_digest_ml_20250929_230027.html
models/: news_classifier.pkl
src/: config.py  logger.py
src/aggregator/: __init__.py  exceptions.py
src/aggregator/parsers/: __init__.py  base.py  hackernews.py  reddit.py
src/api/: __init__.py  dependencies.py  handlers.py  main.py  routes.py  schemas.py  telegram_bot.py
src/api/bot/: __init__.py  callbacks.py  commands.py  constants.py  feed_service.py  keyboards.py  states.py  utils.py
src/db/: __init__.py  cache.py  models.py  repository.py
src/db/repositories/: __init__.py  base.py  post.py  user.py
src/ml/: __init__.py  classifier.py  pipeline.py  semantic_scorer.py  vectorizer.py
src/utils/: __init__.py  profiling.py
src/web/: index.html  package-lock.json  package.json  vite.config.js
src/web/public/: manifest.json  sw.js
src/web/src/: App.jsx  index.css  main.jsx
src/web/src/api/: client.js
src/web/src/components/: PostCard.jsx  PostList.jsx  SettingsPanel.jsx  TopicManager.jsx
src/web/src/components/ui/: badge.jsx  button.jsx  card.jsx  input.jsx  select.jsx
src/web/src/utils/: db.js
src/workers/: __init__.py  cleanup.py  notifications.py  parsers.py  parsing.py  scheduler.py  tasks.py  training.py  types.py
tests/: __init__.py  conftest.py  factories.py  test_models.py
tests/unit/db/: test_repository.py
tests/unit/ml/: __init__.py  test_classifier.py
tests/unit/parsers/: test_hackernews_parser.py
