[project]
name = "aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "better-profanity==0.7.0",
    "google-api-python-client==2.100.0",
    "joblib==1.3.2",
    "numpy==1.24.3",
    "pandas==2.1.0",
    "praw==7.7.1",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "scikit-learn==1.3.0",
    "spacy==3.7.2",
]
