[project]
name = "aggregator"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "better-profanity==0.7.0",
    "aiohttp==3.9.1",
    "asyncpraw==7.7.1",
    "bleach==6.1.0",
    "langdetect==1.0.9",
    "joblib==1.3.2",
    "numpy==1.24.3",
    "pandas==2.1.0",
    "praw==7.7.1",
    "psycopg[binary]==3.1.12",
    "python-dotenv==1.0.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.3",
    "requests==2.31.0",
    "scikit-learn==1.3.0",
    "spacy==3.7.2",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "redis==5.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
